group db methods

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
-<body style="margin: 0">
+<body style="margin: 0; background-color: #FAFBFC;">
     <div id="app">
         
     </div>
